fix: dark mode text color

--- a/app/global.css
+++ b/app/global.css
@@ -87,7 +87,7 @@ html {
 }
 
 .prose p {
-  @apply my-4 text-neutral-800 dark:text-neutral-200 leading-relaxed;
+  @apply my-4 text-neutral-800 leading-relaxed;
 }
 
 .prose h1 {
